<resources>
    <string name="app_name">Learn German App</string>
    <string name="menu_herr_professor">Herr Professor</string>
    <string name="menu_verbs_list">Verbs</string>
    <string name="menu_nouns_list">Nouns</string>
    <string name="menu_adjectives_list">Adjectives</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_me">About Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="translation">Translation</string>
    <string name="course_title">Course Title</string>
    <string name="youtube_link">Youtube Link</string>
</resources>
