<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHerrProfessor"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_btn_margin_top"
            android:text="@string/menu_herr_professor"
            android:textSize="@dimen/large_btn_text_size"
            app:cornerRadius="@dimen/large_btn_radius"
            app:icon="@drawable/ic_herr_professor"
            app:iconPadding="@dimen/large_btn_icon_padding"
            app:iconSize="@dimen/large_btn_icon_size" />

        <Button
            android:id="@+id/btnVerbs"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_btn_margin_top"
            android:text="@string/menu_verbs_list"
            android:textSize="@dimen/large_btn_text_size"
            app:cornerRadius="@dimen/large_btn_radius"
            app:icon="@drawable/ic_verbs"
            app:iconPadding="@dimen/large_btn_icon_padding"
            app:iconSize="@dimen/large_btn_icon_size" />

        <Button
            android:id="@+id/btnNouns"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_btn_margin_top"
            android:text="@string/menu_nouns_list"
            android:textSize="@dimen/large_btn_text_size"
            app:cornerRadius="@dimen/large_btn_radius"
            app:icon="@drawable/ic_nouns"
            app:iconPadding="@dimen/large_btn_icon_padding"
            app:iconSize="@dimen/large_btn_icon_size" />

        <Button
            android:id="@+id/btnAdjectives"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_btn_margin_top"
            android:text="@string/menu_adjectives_list"
            android:textSize="@dimen/large_btn_text_size"
            app:cornerRadius="@dimen/large_btn_radius"
            app:icon="@drawable/ic_adjective"
            app:iconPadding="@dimen/large_btn_icon_padding"
            app:iconSize="@dimen/large_btn_icon_size" />

        <Button
            android:id="@+id/btnSettings"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_btn_margin_top"
            android:text="@string/menu_settings"
            android:textSize="@dimen/large_btn_text_size"
            app:cornerRadius="@dimen/large_btn_radius"
            app:icon="@drawable/ic_settings"
            app:iconPadding="@dimen/large_btn_icon_padding"
            app:iconSize="@dimen/large_btn_icon_size" />

        <Button
            android:id="@+id/btnAboutMe"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_btn_margin_top"
            android:text="@string/menu_about_me"
            android:textSize="@dimen/large_btn_text_size"
            app:cornerRadius="@dimen/large_btn_radius"
            app:icon="@drawable/ic_about"
            app:iconPadding="@dimen/large_btn_icon_padding"
            app:iconSize="@dimen/large_btn_icon_size" />
    </LinearLayout>
</RelativeLayout>